--- a/package.json
+++ b/package.json
@@ -1,38 +1,50 @@
 {
-  "name": "saas-hotel-v1",
-  "version": "0.1.0",
-  "private": true,
+  "name": "react",
+  "version": "1.0.0",
+  "description": "",
+  "keywords": [],
+  "main": "main.js",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "antd": "5.12.5",
+    "react-router-dom": "5.3.0",
+    "@mui/material": "5.15.2",
+    "@emotion/styled": "11.11.0",
+    "@emotion/react": "11.11.3",
+    "@emotion/hash": "0.9.1",
+    "@material-ui/core": "4.12.4",
+    "@material-ui/private-theming": "5.0.0-alpha.33",
+    "electron-squirrel-startup": "^1.0.0",
+    "@material-ui/icons": "4.11.3",
+    "@mui/icons-material": "5.15.1",
+    "moment": "2.30.1",
+    "material-ui-w-autocomplete": "4.9.8",
+    "@mui/lab": "5.0.0-alpha.158",
+    "@fortawesome/react-fontawesome": "0.2.0",
+    "@fortawesome/fontawesome-svg-core": "6.5.1",
+    "@fortawesome/free-solid-svg-icons": "6.5.1",
+    "axios": "1.6.5",
+    "react-to-print": "2.14.15",
+    "jspdf": "2.5.1",
+    "countries-list": "3.0.6",
+    "i18n-iso-countries": "7.7.0",
+    "styled-components": "6.1.8",
+    "country-state-city": "3.2.1",
+    "webpack-custom-var-library-name-plugin": "1.0.2",
+    "library-name": "1.1.0"
+  },
+  "devDependencies": {
+    "@types/react": "18.2.38",
+    "@types/react-dom": "18.0.9",
+    "loader-utils": "3.2.1",
+    "typescript": "4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "build": "react-scripts build",
+  "electron:start": "concurrently \"BROWSER=none npm run start\" \"electron .\""
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
 }
